Bug 245582 - hwpstate_intel: Failed to set autonomous HWP for package
Summary: hwpstate_intel: Failed to set autonomous HWP for package
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: CURRENT
Hardware: amd64 Any
: --- Affects Only Me
Assignee: Yuri Pankov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-12 21:40 UTC by Yuri Pankov
Modified: 2020-12-02 22:30 UTC (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yuri Pankov 2020-04-12 21:40:27 UTC
That message seems to be printed unconditionally as we forgot to check the actual return value here:

https://svnweb.freebsd.org/base/head/sys/x86/cpufreq/hwpstate_intel.c?revision=358333&view=markup#l463

Just for the record, relevant dmesg entries:

CPU: Intel(R) Core(TM) i9-10900X CPU @ 3.70GHz (3700.00-MHz K8-class CPU)
  Origin="GenuineIntel"  Id=0x50657  Family=0x6  Model=0x55  Stepping=7
  Features=0xbfebfbff<FPU,VME,DE,PSE,TSC,MSR,PAE,MCE,CX8,APIC,SEP,MTRR,PGE,MCA,CMOV,PAT,PSE36,CLFLUSH,DTS,ACPI,MMX,FXSR,SSE,SSE2,SS,HTT,TM,PBE>
  Features2=0x7ffefbbf<SSE3,PCLMULQDQ,DTES64,MON,DS_CPL,VMX,EST,TM2,SSSE3,SDBG,FMA,CX16,xTPR,PDCM,PCID,DCA,SSE4.1,SSE4.2,x2APIC,MOVBE,POPCNT,TSCDLT,AESNI,XSAVE
,OSXSAVE,AVX,F16C,RDRAND>
  AMD Features=0x2c100800<SYSCALL,NX,Page1GB,RDTSCP,LM>
  AMD Features2=0x121<LAHF,ABM,Prefetch>
  Structured Extended Features=0xd39ffffb<FSGSBASE,TSCADJ,BMI1,HLE,AVX2,FDPEXC,SMEP,BMI2,ERMS,INVPCID,RTM,PQM,NFPUSG,MPX,PQE,AVX512F,AVX512DQ,RDSEED,ADX,SMAP,C
LFLUSHOPT,CLWB,PROCTRACE,AVX512CD,AVX512BW,AVX512VL>
  Structured Extended Features2=0x800<AVX512VNNI>
  Structured Extended Features3=0xbc000400<MD_CLEAR,IBPB,STIBP,L1DFL,ARCH_CAP,SSBD>
  XSAVE Features=0xf<XSAVEOPT,XSAVEC,XINUSE,XSAVES>
  IA32_ARCH_CAPS=0xab<RDCL_NO,IBRS_ALL,SKIP_L1DFL_VME,MDS_NO,TSX_CTRL>
  VT-x: PAT,HLT,MTF,PAUSE,EPT,UG,VPID,VID,PostIntr
  TSC: P-state invariant, performance statistics
...
hwpstate_intel0: <Intel Speed Shift> numa-domain 0 on cpu0
hwpstate_intel0: Failed to set autonomous HWP for package
(repeating for every hardware thread)
Comment 1 commit-hook freebsd_committer freebsd_triage 2020-11-29 01:44:00 UTC
A commit references this bug:

Author: yuripv
Date: Sun Nov 29 01:43:05 UTC 2020
New revision: 368140
URL: https://svnweb.freebsd.org/changeset/base/368140

Log:
  hwpstate_intel: don't unconditionally print the error message

  Actually check the wrmsr_safe() return value when setting autonomous
  HWP for package.

  PR:		245582
  Differential Revision:	https://reviews.freebsd.org/D24744

Changes:
  head/sys/x86/cpufreq/hwpstate_intel.c