hwpstate_intel: don't unconditionally print the error message

Actually check the wrmsr_safe() return value when setting autonomous
HWP for package.

PR:		245582
Differential Revision:	https://reviews.freebsd.org/D24744


git-svn-id: svn+ssh://svn.freebsd.org/base/head@368140 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f